Moved external styles to Frameworks folder and adjusted BundleConfig to accomodate

--- a/ayce-main/ayce-code/ayce.csproj
+++ b/ayce-main/ayce-code/ayce.csproj
@@ -128,10 +128,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Images\logo-90x90.png" />
-    <Content Include="Assets\Styles\bootstrap-theme.css" />
-    <Content Include="Assets\Styles\bootstrap-theme.min.css" />
-    <Content Include="Assets\Styles\bootstrap.css" />
-    <Content Include="Assets\Styles\bootstrap.min.css" />
+    <Content Include="Assets\Styles\Frameworks\bootstrap-theme.css" />
+    <Content Include="Assets\Styles\Frameworks\bootstrap-theme.min.css" />
+    <Content Include="Assets\Styles\Frameworks\bootstrap.css" />
+    <Content Include="Assets\Styles\Frameworks\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Assets\Fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -139,7 +139,7 @@
     <Content Include="Assets\Scripts\bootstrap.js" />
     <Content Include="Assets\Scripts\bootstrap.min.js" />
     <None Include="Assets\Scripts\jquery-3.4.1.intellisense.js" />
-    <Content Include="Assets\Styles\foundation.css" />
+    <Content Include="Assets\Styles\Frameworks\foundation.css" />
     <Content Include="Assets\Scripts\foundation.js" />
     <Content Include="Assets\Scripts\jquery-3.4.1.js" />
     <Content Include="Assets\Scripts\jquery-3.4.1.min.js" />
@@ -177,10 +177,10 @@
     <Content Include="Assets\Fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Assets\Fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Assets\Fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="Assets\Styles\bootstrap.min.css.map" />
-    <Content Include="Assets\Styles\bootstrap.css.map" />
-    <Content Include="Assets\Styles\bootstrap-theme.min.css.map" />
-    <Content Include="Assets\Styles\bootstrap-theme.css.map" />
+    <Content Include="Assets\Styles\Frameworks\bootstrap.min.css.map" />
+    <Content Include="Assets\Styles\Frameworks\bootstrap.css.map" />
+    <Content Include="Assets\Styles\Frameworks\bootstrap-theme.min.css.map" />
+    <Content Include="Assets\Styles\Frameworks\bootstrap-theme.css.map" />
     <None Include="packages.config" />
     <Content Include="Assets\Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Assets\Scripts\jquery-3.4.1.min.map" />
