--- a/ayce-main/ayce-code/ayce.csproj
+++ b/ayce-main/ayce-code/ayce.csproj
@@ -171,11 +171,24 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Icons\Food\Bowtie.svg" />
+    <Content Include="Assets\Icons\Food\Chinese_Bowl.svg" />
+    <Content Include="Assets\Icons\Food\Coffee.svg" />
+    <Content Include="Assets\Icons\Food\Croissant.svg" />
+    <Content Include="Assets\Icons\Food\Hamburger.svg" />
+    <Content Include="Assets\Icons\Food\Ice_Cream.svg" />
+    <Content Include="Assets\Icons\Logo.svg" />
+    <Content Include="Assets\Icons\Media\Github.svg" />
+    <Content Include="Assets\Icons\Media\LinkedIn.svg" />
+    <Content Include="Assets\Icons\Stars.svg" />
+    <Content Include="Assets\Icons\Food\Sushi.svg" />
+    <Content Include="Assets\Icons\Food\Taco.svg" />
     <Content Include="Assets\Images\logo-90x90.png" />
     <Content Include="Assets\Scripts\foundation-6.6.3.min.js">
       <DependentUpon>foundation-6.6.3.js</DependentUpon>
     </Content>
     <None Include="Assets\Styles\Components\_Hero.scss" />
+    <None Include="Assets\Styles\Components\_CuisineQuickMenu.scss" />
     <Content Include="Assets\Styles\Frameworks\foundation-6.6.3.min.css">
       <DependentUpon>foundation-6.6.3.css</DependentUpon>
     </Content>
@@ -211,6 +224,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\ButterCMSPage\Dish.cshtml" />
     <Content Include="Views\Shared\Partials\Header.cshtml" />
+    <Content Include="Views\Shared\Components\CuisineQuickMenu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Code\" />
